# cicloTDDPythonRequisitos

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  docker-compose.yml  plan_de_pruebas.md  pyproject.toml
.github/workflows/: python-app.yml
features/: shopping_cart.feature
features/steps/: shopping_cart_steps.py
src/: database.py  main.py  repository.py  shopping_cart.py
tests/: test_shopping_cart.py
tests/integration/: test_carrito_repositorio.py
tests/system/: test_shopping_flow.py
